--- a/AndroidStudio/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="facebook_app_id">1393451057454969</string> <string name="fb_login_protocol_scheme">fb1393451057454969</string>
+    <string name="facebook_app_id">1393451057454969</string>
+    <string name="fb_login_protocol_scheme">fb1393451057454969</string>
 
     <string name="pref_header_general">General</string>
 
@@ -82,4 +83,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
