--- a/AndroidStudio/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <!-- Example General settings -->
     <string name="facebook_app_id">1393451057454969</string>
     <string name="fb_login_protocol_scheme">fb1393451057454969</string>
+    <string name="idFAbecebook">idFAbecebook</string>
 
     <string name="pref_header_general">General</string>
 
